crates/slakio-tui/tests/snapshots/app_flows__empty_80x24.snap
---
source: crates/slakio-tui/tests/app_flows.rs
expression: "screen(&app, 80, 24, now)"
---









                                     slakio
                Early development: nothing connects to Slack yet.
                        Type :qa and press Enter to quit.
           To try the interface with invented data, run slakio --demo.










 NORMAL
